--- a/differentialExpression.Rmd
+++ b/differentialExpression.Rmd
@@ -15,6 +15,10 @@ library(Rsamtools)
 library(GenomicAlignments)
 library(BiocParallel)
 library(DESeq2)
+library(ggplot2)
+
+ts<-format(Sys.time(), "%a_%b_%d_%Y_%H%M")
+cbPalette <- c("#999999", "#E69F00", "#56B4E9", "#009E73", "#F0E442", "#0072B2", "#D55E00", "#CC79A7")
 ```
 
 ## EDA
@@ -25,6 +29,7 @@ cds <- estimateSizeFactors(cds)
 cds$filename<-rownames(colData(cds))
 colData(cds)$genotype<-sapply(strsplit(rownames(colData(cds)),"-"),function(x){x[1]})
 colData(cds)$salt<-ifelse(sapply(strsplit(rownames(colData(cds)),"-"),function(x){x[2]})=="Nacl","Nacl","noSalt")
-plotPCA(cds,intgroup=c(salt,genotype))
+plotPCA(DESeqTransform(cds),intgroup=c("salt","genotype"))+
+  scale_color_manual(values=cbPalette)  + theme_bw()
 ```
 
