--- a/differentialExpression.Rmd
+++ b/differentialExpression.Rmd
@@ -18,6 +18,7 @@ library(DESeq2)
 library(ggplot2)
 library(magrittr)
 library(biomaRt)
+library(ChIPpeakAnno)
 
 ts<-format(Sys.time(), "%a_%b_%d_%Y_%H%M")
 cbPalette <- c("#999999", "#E69F00", "#56B4E9", "#009E73", "#F0E442", "#0072B2", "#D55E00", "#CC79A7")
@@ -125,9 +126,75 @@ head(res_merged)
 res_merged<-subset(res_merged,!(is.na(WT.log2FoldChange) | is.na(hnf1b.log2FoldChange)))
 idx<-match(rownames(res_merged),mgi$ensembl_gene_id)
 res_merged$mgi<-mgi[idx,"mgi_symbol"]
-plot(res_merged$WT.log2FoldChange,res_merged$hnf1b.log2FoldChange,pch=16,cex=0.5,xlab="WT Salt Induced Log2FC",ylab="Hnf1b Salt Induced Log2FC")
-abline(h=0,col="red2")
-res_merged[identify(res_merged$WT.log2FoldChange,res_merged$hnf1b.log2FoldChange,labels=res_merged$mgi),]
+res_merged$'Effect Size'<-abs(res_merged$WT.log2FoldChange-res_merged$hnf1b.log2FoldChange)
 
+plot(res_merged$WT.log2FoldChange,res_merged$hnf1b.log2FoldChange,pch=16,cex=0.5,xlab="WT Salt Induced Log2FC",ylab="Hnf1b Salt Induced Log2FC",col=ifelse(res_merged$`Effect Size` > 1,"red","black"))
+abline(h=0,col="red2")
+#res_merged[identify(res_merged$WT.log2FoldChange,res_merged$hnf1b.log2FoldChange,labels=res_merged$mgi),]
+```
+
+## load Karam's Direct Target List
+```{r}
+head(dt<-read.table("hnf1b_direct_targets.txt",stringsAsFactors=F))
+dt<-AnnotationDbi::select(org.Mm.eg.db,columns="ENSEMBL",keytype="ALIAS",keys=dt$V1)
+sum(!is.na(dt$ENSEMBL))
+res_merged$'Direct Target'<-rownames(res_merged) %in% dt$ENSEMBL
+View(res_merged)
+
+plot(res_merged$WT.log2FoldChange,res_merged$hnf1b.log2FoldChange,pch=16,cex=0.5,xlab="WT Salt Induced Log2FC",ylab="Hnf1b Salt Induced Log2FC",col=ifelse(res_merged$`Direct Target`,"red","black"))
+
+res_merged<-res_merged[with(res_merged,order('Direct Target','Effect Size')),]
+View(res_merged)
+res_merged[res_merged$`Direct Target` & res_merged$`Effect Size` > 1,]
+
+gg_plotCounts("Arhgap24")
+gg_plotCounts("Col4a1")
+```
+
+```{bash MACS,eval=F}
+macs2 callpeak --call-summits -c igg_rep1_SRR2124926.dedup.unique.bam  -t hnf1b_rep1_SRR2124924.dedup.unique.bam -n hnf1b_rep1 -g mm
+macs2 callpeak --call-summits -c igg_rep2_SRR2124927.dedup.unique.bam  -t hnf1b_rep2_SRR2124925.dedup.unique.bam -n hnf1b_rep2 -g mm
+```
+
+##
+```{r}
+narrowPeakToGRanges<-function(file) {
+  x <- read.table(file,stringsAsFactors=F)
+  gr <-GRanges(seqnames=x$V1, ranges = IRanges(start=x$V2, end=x$V3),
+               strand="*", score=x$V5, e=x$V7,summit=x$V10)
+  return(gr)
+}
+
+#devtools::install_github("lawremi/HelloRanges")
+hnf1b_rep1<-narrowPeakToGRanges("hnf1b_rep1_peaks.narrowPeak")
+hnf1b_rep2<-narrowPeakToGRanges("hnf1b_rep2_peaks.narrowPeak")
+pairs<-findOverlapPairs(hnf1b_rep1,hnf1b_rep2)
+hnf1b<-pintersect(pairs)
+head(hnf1b_rep2)
+
+tss<-getAnnotation(ensembl_84,featureType="TSS")
+tss<-tss[rownames(res[res$baseMean > 1,])]
+hnf1b_anno <- annotatePeakInBatch(hnf1b, AnnotationData=tss, output="both", maxgap=100L)
+summary(hnf1b_anno$shortestDistance)
+table(hnf1b_anno$insideFeature)
+p1<-hnf1b_anno[hnf1b_anno$insideFeature=="upstream" & hnf1b_anno$shortestDistance < 50000,]$feature
+p2<-hnf1b_anno[hnf1b_anno$insideFeature=="inside" | hnf1b_anno$insideFeature=="overlapStart" | hnf1b_anno$insideFeature=="overlapEnd"]$feature
+p<-unique(c(p1,p2))
+res_merged$`Nearby Peak`<-rownames(res_merged) %in% p
+sum(res_merged$`Nearby Peak`)
+View(res_merged)
+```
+
+## Create Output
+```{r}
+colnames(res_merged)
+temp<-res_merged[,c("mgi","WT.baseMean","WT.log2FoldChange","WT.padj","hnf1b.log2FoldChange","hnf1b.padj","Effect Size","Direct Target","Nearby Peak")]
+colnames(temp)<-c("MGI Symbol","baseMean","WT.log2FoldChange","WT.padj","Hnf1b.log2FoldChange","Hnf1b.padj","Effect_Size","Direct_Target","Nearby Peak")
+temp<-temp[with(temp,order(-Effect_Size)),]
+head(temp,40)
+write.csv(temp,file="hnf1b_nacl_log2FCs_wChIPdata_071016.csv",quote=F)
+options(httr_oob_default=TRUE)
+gs_auth(new_user = TRUE)
+googlesheets::gs_upload("hnf1b_nacl_log2FCs_wChIPdata_071016.csv")
 ```
 
