--- a/differentialExpression.Rmd
+++ b/differentialExpression.Rmd
@@ -19,6 +19,8 @@ library(ggplot2)
 library(magrittr)
 library(biomaRt)
 library(ChIPpeakAnno)
+library(Mus.musculus)
+library(goseq)
 
 ts<-format(Sys.time(), "%a_%b_%d_%Y_%H%M")
 cbPalette <- c("#999999", "#E69F00", "#56B4E9", "#009E73", "#F0E442", "#0072B2", "#D55E00", "#CC79A7")
@@ -110,11 +112,11 @@ design(cds2)<- ~ group
 cds2 <- DESeq(cds2) 
 resultsNames(cds2)
 
-summary(res_wt<-results(cds2, contrast=c("group","ControlnoSalt","ControlNacl"),alpha=0.05))
+summary(res_wt<-results(cds2, contrast=c("group","ControlNacl","ControlnoSalt"),alpha=0.05))
 res_wt<-as.data.frame(res_wt)
 colnames(res_wt)<-paste0("WT",".",colnames(res_wt))
 
-summary(res_hnf1b<-results(cds2, contrast=c("group","MifnoSalt","MifNacl")))
+summary(res_hnf1b<-results(cds2, contrast=c("group","MifNacl","MifnoSalt")))
 res_hnf1b<-as.data.frame(res_hnf1b)
 colnames(res_hnf1b)<-paste0("hnf1b",".",colnames(res_hnf1b))
 
@@ -126,7 +128,7 @@ head(res_merged)
 res_merged<-subset(res_merged,!(is.na(WT.log2FoldChange) | is.na(hnf1b.log2FoldChange)))
 idx<-match(rownames(res_merged),mgi$ensembl_gene_id)
 res_merged$mgi<-mgi[idx,"mgi_symbol"]
-res_merged$'Effect Size'<-abs(res_merged$WT.log2FoldChange-res_merged$hnf1b.log2FoldChange)
+res_merged$'Effect Size'<-abs(res_merged$hnf1b.log2FoldChange-res_merged$WT.log2FoldChange)
 
 plot(res_merged$WT.log2FoldChange,res_merged$hnf1b.log2FoldChange,pch=16,cex=0.5,xlab="WT Salt Induced Log2FC",ylab="Hnf1b Salt Induced Log2FC",col=ifelse(res_merged$`Effect Size` > 1,"red","black"))
 abline(h=0,col="red2")
@@ -196,5 +198,141 @@ write.csv(temp,file="hnf1b_nacl_log2FCs_wChIPdata_071016.csv",quote=F)
 options(httr_oob_default=TRUE)
 gs_auth(new_user = TRUE)
 googlesheets::gs_upload("hnf1b_nacl_log2FCs_wChIPdata_071016.csv")
+```
+
+## GO Analysis
+```{r}
+expressed_genes<-rownames(res_wt[res_wt$WT.baseMean > 1 & !is.na(res_wt$WT.log2FoldChange) & !is.na(res_wt$WT.padj),])
+gocat<-AnnotationDbi::select(Mus.musculus,keys=expressed_genes,keytype="ENSEMBL",columns="GOID")
+gocat<-gocat[gocat$ONTOLOGY=="BP",c("ENSEMBL","GOID")]
+gocat$GOID<-as.character(gocat$GOID)
+gocat.list<-split(gocat$GOID,gocat$ENSEMBL)
+gocat.list[["ENSMUSG00000047638"]] #fxr
+gocat.list[["ENSMUSG00000030109"]] #Slc6a12
+gocat.list[["ENSMUSG00000043760"]] #Pkhd1
+
+#bias data
+bd<-sum(width(reduce(ranges(genehits))))
+bd["ENSMUSG00000047638"]
+#bd<-bd[names(bd) %in% expressed_genes]
+head(bd<-bd[expressed_genes])
+
+#bias data
+temp<-res_wt[expressed_genes,]
+degs<-as.numeric(temp$WT.padj < 0.05 & abs(temp$WT.log2FoldChange ) > 1)
+names(degs)<-rownames(temp)
+table(degs)
+summary(degs)
+
+
+listGO<-function(goid) {
+print(OrganismDbi::select(Mus.musculus,keys=goid,keytype="GOID",columns="TERM"))
+tg<-OrganismDbi::select(Mus.musculus,keys=gocat[grep(goid,gocat$GOID),"ENSEMBL"],keytype="ENSEMBL",columns="SYMBOL")
+tg$deg<-degs[tg$ENSEMBL]
+tg
+}
+
+pwf<-nullp(degs,bias.data=bd)
+GO.wall<-goseq(pwf,gene2cat=gocat.list)
+
+head(GO.wall,20) %>%
+  mutate(term=factor(term,levels=rev(term))) %>%
+ggplot(aes(x=term,y=-log10(over_represented_pvalue))) +
+  geom_bar(stat="identity",fill="red") +
+  coord_flip() + xlab("") +
+  theme_bw() 
+
+
+temp<-listGO("GO:0006814")
+head(temp)
+res_merged$sodium_transport<-rownames(res_merged) %in% temp$ENSEMBL
+res_merged[res_merged$sodium_transport & res_merged$`Effect Size` > 1,]$mgi
+
+temp<-listGO("GO:0006811")
+head(temp)
+res_merged$ion_transport<-rownames(res_merged) %in% temp$ENSEMBL
+View(res_merged)
+res_merged[res_merged$ion_transport & res_merged$`Effect Size` > 1,]$mgi
+
+```
+
+
+## Wt vs DN
+```{r}
+summary(res_genotype<-results(cds2, contrast=c("group","MifnoSalt","ControlnoSalt"),alpha=0.05))
+colnames(res_genotype)<-paste0("Wt_vs_DN",".",colnames(res_genotype))
+#head(res_genotype<-as.data.frame(res_genotype))
+#head(res_genotype[!(is.na(res_genotype$Wt_vs_DN.padj) | is.na(res_genotype$Wt_vs_DN.log2FoldChange)),])
+res_genotype<-res_genotype[!(is.na(res_genotype$Wt_vs_DN.padj) | is.na(res_genotype$Wt_vs_DN.log2FoldChange)),]
+idx<-match(rownames(res_genotype),mgi$ensembl_gene_id)
+res_genotype$mgi<-mgi[idx,]$mgi_symbol
+res_genotype<-res_genotype[with(res_genotype,order(Wt_vs_DN.padj,Wt_vs_DN.log2FoldChange)),]
+head(res_genotype)
+res_genotype$`Nearby Peak`<-rownames(res_genotype) %in% p
+res_genotype$'Direct Target'<-rownames(res_genotype) %in% dt$ENSEMBL
+
+temp<-res_genotype[,c("mgi","Wt_vs_DN.baseMean","Wt_vs_DN.log2FoldChange","Wt_vs_DN.padj","Direct Target","Nearby Peak")]
+head(temp)
+gg_plotCounts("Pde4c")
+write.csv(temp,file="Wt_vs_DN_log2FCs_wChIPdata_071416.csv",quote=F)
+options(httr_oob_default=TRUE)
+googlesheets::gs_auth(new_user = TRUE)
+temp_gs<-googlesheets::gs_upload("Wt_vs_DN_log2FCs_wChIPdata_071416.csv")
+googlesheets::gs_browse(temp_gs)
+
+```
+
+"Mon Aug  8 13:43:37 2016"
+ 
+ Want to make a heatmap of the Log2FC data of genes that don't change in the Mutant but do change in the WT.  Also a Log2Fc wt vs Log2FC mutant.
+  A - Schematic
+  B - Heatmap with Log2FC values (2 colums, 45+27 genes, annotation of wheter or not it is a direct target or not).  Sorted by size effect, not clustered
+  C - Stacked Barchart?  Number of Genes with Ups and Downs
+  D - Scatterplot with LogFC WT vs LogFC MT
+  
+  
+```{r}
+head(res_merged)
+
+nrow(temp<-res_merged[abs(res_merged$WT.log2FoldChange) > 0.5 & abs(res_merged$hnf1b.log2FoldChange) < 0.1,])
+nrow(temp<-res_merged[abs(res_merged$WT.log2FoldChange) > 0.5,])
+nrow(temp<-res_merged)
+plot(temp$WT.log2FoldChange,temp$hnf1b.log2FoldChange,cex=0.5,pch=16,col=ifelse(temp$`Nearby Peak`,"red","black"))
+identify(temp$WT.log2FoldChange,temp$hnf1b.log2FoldChange,labels=temp$mgi)
+```
+
+```{r}
+ftu<-read_excel("failed_to_upregulate.xlsx")
+ftu<-ftu[,1:10]
+ftd<-read_excel("failed_to_downregulate.xlsx")
+ftd<-ftd[,1:10]
+ft<-as.data.frame(rbind(ftu,ftd))
+plot(ft$WT.log2FoldChange,ft$Hnf1b.log2FoldChange,cex=0.5,pch=16,col=ifelse(ft$`Nearby Peak`,"red","black"))
+identify(ft$WT.log2FoldChange,ft$Hnf1b.log2FoldChange,labels=ft$'MGI Symbol')
+```
+
+## Remade res_merged to get the signs correct
+```{r}
+temp<-res_merged[,c("mgi","WT.baseMean","WT.log2FoldChange","WT.padj","hnf1b.log2FoldChange","hnf1b.padj","Effect Size","Direct Target","Nearby Peak")]
+colnames(temp)<-c("MGI Symbol","baseMean","WT.log2FoldChange","WT.padj","Hnf1b.log2FoldChange","Hnf1b.padj","Effect_Size","Direct_Target","Nearby Peak")
+#Keep Karam's Peaks
+temp<-temp[ft[,1],]
+temp$`Nearby Peak`<-factor(ifelse(temp$`Nearby Peak`,"Bound by Hnf1b","Not Bound"))
+
+dim(x<-temp[with(temp,order(-WT.log2FoldChange)),])
+hist(x$WT.log2FoldChange,breaks = 100)
+dim(x<-x[abs(x$WT.log2FoldChange) > 1.0,])
+
+adf<-x[,"Nearby Peak",drop=F]
+ann_colors = list( `Nearby Peak` = c("Not Bound"="white", "Bound by Hnf1b"="black") )
+
+
+pheatmap(x[,c("WT.log2FoldChange","Hnf1b.log2FoldChange")],cluster_rows=F,cluster_cols=F,labels_row=x[,"MGI Symbol"],
+         annotation_row = adf,annotation_colors = ann_colors,annotation_legend = FALSE)
+```
+
+## Barchart
+```{r}
+
 ```
 
