--- a/differentialExpression.Rmd
+++ b/differentialExpression.Rmd
@@ -21,7 +21,8 @@ library(biomaRt)
 library(ChIPpeakAnno)
 library(Mus.musculus)
 library(goseq)
-library(pheatmap)
+library(ComplexHeatmap)
+library(gridExtra)
 
 ts<-format(Sys.time(), "%a_%b_%d_%Y_%H%M")
 cbPalette <- c("#999999", "#E69F00", "#56B4E9", "#009E73", "#F0E442", "#0072B2", "#D55E00", "#CC79A7")
@@ -37,6 +38,11 @@ mgi <-  getBM(attributes = c("ensembl_gene_id", "mgi_id", "mgi_symbol"), filters
     values = names(ens84), mart = ensembl_84)
 save(ens84,file="ens84_mouse.rdata")
 save(mgi,file="mgi.rdata")
+
+#Need TSS data for ChIP Annotation
+tss<-getAnnotation(ensembl_84,featureType="TSS")
+save(tss,file="tss.rdata")
+
 ```
 ## Summarize Overlaps
 
@@ -50,6 +56,8 @@ cds <- DESeqDataSet(genehits,design=~1)
 cds$filename<-rownames(colData(cds))
 colData(cds)$genotype<-as.factor(sapply(strsplit(rownames(colData(cds)),"-"),function(x){x[1]}))
 colData(cds)$salt<-factor(ifelse(sapply(strsplit(rownames(colData(cds)),"-"),function(x){x[2]})=="Nacl","Nacl","noSalt"),levels=c("noSalt","Nacl"))
+
+#PCA plot by Group
 plotPCA(DESeqTransform(cds),intgroup=c("salt","genotype"))+
   scale_color_manual(values=cbPalette)  + theme_bw()
 ```
@@ -58,9 +66,11 @@ plotPCA(DESeqTransform(cds),intgroup=c("salt","genotype"))+
 design(cds)<- ~ genotype + salt + genotype:salt
 cds <- DESeq(cds)
 
+#Plot Hnf1b Counts
 plotCounts(cds,"ENSMUSG00000020679",intgroup=c("salt","genotype"),returnData=F)
 ```
 
+## ggplot version of plotCounts to facet by genotype
 ```{r}
 gg_plotCounts<-function(x="ENSMUSG00000020679") {
   if (substr(x,1,7)=="ENSMUSG") {
@@ -72,7 +82,7 @@ gg_plotCounts<-function(x="ENSMUSG00000020679") {
   
 plotCounts(cds,x,intgroup=c("salt","genotype"),returnData=T) %>% 
   ggplot(aes(x=salt, y=count)) +
-  geom_point(position=position_jitter(w=0.1,h=0)) + ggtitle(paste0(x,":",title)) +
+  geom_point(position=position_jitter(w=0.1,h=0)) + ggtitle(paste0(x,"\n",title)) +
  # scale_y_log10(breaks=c(25,100,400)) + 
  # scale_y_continuous(trans="log2") + ylim(0,25000) +
   expand_limits(x=0, y = 0) +
@@ -92,26 +102,29 @@ resDF<-resDF[!is.na(resDF$padj),]
 resDF<-resDF[with(resDF,order(-log2FoldChange)),]
 idx<-match(rownames(resDF),mgi$ensembl_gene_id)
 resDF$mgi<-mgi[idx,"mgi_symbol"]
-head(resDF,20)
-resDF["ENSMUSG00000047638",]
-gg_plotCounts("Slc14a1")
-gg_plotCounts("Lrrn3")
-tail(resDF)
-gg_plotCounts("Saa3")
-gg_plotCounts("Zfp750")
-
 resDF<-resDF[with(resDF,order(padj)),]
 head(resDF)
-gg_plotCounts("Ppbp")
+resDF["ENSMUSG00000047638",]
+g1<-gg_plotCounts("Slc14a1")
+g2<-gg_plotCounts("Lrrn3")
+tail(resDF)
+g3<-gg_plotCounts("Saa3")
+g4<-gg_plotCounts("Zfp750")
+grid.arrange(g1,g2,g3,g4,ncol=2)
 
-gg_plotCounts("Nr1h4")
-gg_plotCounts("Pkhd1")
+g1<-gg_plotCounts("Ppbp")
+g2<-gg_plotCounts("Nr1h4")
+g3<-gg_plotCounts("Pkhd1")
+g4<-gg_plotCounts("Kdm7a")
+grid.arrange(g1,g2,g3,g4,ncol=2)
 
+## Make a list of genes that have high (logFC > 1) Interaction Terms
 length(interactive_genes<-rownames(resDF[abs(resDF$log2FoldChange) > 1 & resDF$padj < 0.05,]))
 
 ```
 
-## control logfc vs hnf1b logfc
+# Calculate LogFC within each Genotype
+## Control Cells
 ```{r}
 cds2<-cds
 cds2$group <- factor(paste0(cds2$genotype, cds2$salt))
@@ -119,11 +132,13 @@ design(cds2)<- ~ group
 cds2 <- DESeq(cds2) 
 resultsNames(cds2)
 
-summary(res_wt<-results(cds2, contrast=c("group","ControlNacl","ControlnoSalt"),alpha=0.05))
+summary(res_wt<-results(cds2, contrast=c("group","ControlNacl","ControlnoSalt"),alpha=0.05,lfcThreshold = 0))
+table(ifelse(res_wt$log2FoldChange>1, "up", ifelse(res_wt$log2FoldChange< -1, "down", "no_change")))
 res_wt<-as.data.frame(res_wt)
 colnames(res_wt)<-paste0("WT",".",colnames(res_wt))
 
 summary(res_hnf1b<-results(cds2, contrast=c("group","MifNacl","MifnoSalt")))
+table(ifelse(res_hnf1b$log2FoldChange>1, "up", ifelse(res_hnf1b$log2FoldChange< -1, "down", "no_change")))
 res_hnf1b<-as.data.frame(res_hnf1b)
 colnames(res_hnf1b)<-paste0("hnf1b",".",colnames(res_hnf1b))
 
@@ -134,57 +149,40 @@ res_merged<-subset(res_merged,!(is.na(WT.log2FoldChange) | is.na(hnf1b.log2FoldC
 dim(res_merged)
 idx<-match(rownames(res_merged),mgi$ensembl_gene_id)
 res_merged$mgi<-mgi[idx,"mgi_symbol"]
-res_merged$'Effect Size'<-abs(res_merged$hnf1b.log2FoldChange-res_merged$WT.log2FoldChange)
 
-
-#Alternative to Effect size is to highlight genes with interaction term
+#Highlight genes with strong interaction term
 res_merged$iTerm<-rownames(res_merged) %in% interactive_genes
 summary(idx<-match(rownames(res_merged),rownames(resDF)))
 res_merged$int<-resDF[idx,"log2FoldChange"]
 res_merged[is.na(res_merged$int),]<-0
 res_merged$int.padj<-resDF[idx,"padj"]
 
-plot(res_merged$WT.log2FoldChange,res_merged$hnf1b.log2FoldChange,pch=16,cex=0.5,xlab="WT Salt Induced Log2FC",ylab="Hnf1b Salt Induced Log2FC",col=ifelse(res_merged$`Effect Size` > 1 & abs(res_merged$WT.log2FoldChange) > 1,"red","black"))
-res_merged[identify(res_merged$WT.log2FoldChange,res_merged$hnf1b.log2FoldChange,labels=res_merged$mgi),]
+plot(res_merged$WT.log2FoldChange,res_merged$hnf1b.log2FoldChange,pch=16,cex=0.5,
+     xlab="WT Salt Induced Log2FC",
+     ylab="Hnf1b Salt Induced Log2FC",
+     main="Log2FC in Hnf1b DN vs WT Cells",
+     col=ifelse(res_merged$iTerm,"red","black"))
 
-ggplot(res_merged,aes(x=WT.log2FoldChange,y=hnf1b.log2FoldChange)) + geom_point(aes(colour = int)) + theme_bw() +
-  scale_colour_gradient2("Hnf1b:NaCl\nInteraction\nEffect Size") 
-
-  #scale_colour_manual(values=c("black","red"))+
-  annotate("text", x = res_merged["ENSMUSG00000047638",]$WT.log2FoldChange + 1.0, 
-           y = res_merged["ENSMUSG00000047638",]$hnf1b.log2FoldChange - 0.2, label = "FXR")
-
-abline(h=0,col="red2")
 #res_merged[identify(res_merged$WT.log2FoldChange,res_merged$hnf1b.log2FoldChange,labels=res_merged$mgi),]
-
-res_merged["ENSMUSG00000047638",]
-gg_plotCounts("ENSMUSG00000059336")
 ```
 
-## load Karam's Direct Target List
+#Figure 3C
 ```{r}
-head(dt<-read.table("hnf1b_direct_targets.txt",stringsAsFactors=F))
-dt<-AnnotationDbi::select(org.Mm.eg.db,columns="ENSEMBL",keytype="ALIAS",keys=dt$V1)
-sum(!is.na(dt$ENSEMBL))
-res_merged$'Direct Target'<-rownames(res_merged) %in% dt$ENSEMBL
-View(res_merged)
+(g1<-ggplot(res_merged,aes(x=WT.log2FoldChange,y=hnf1b.log2FoldChange)) + geom_point(aes(colour = int)) + theme_bw() +
+  scale_colour_gradient2("Hnf1b:NaCl\nInteraction\nEffect Size") )
 
-plot(res_merged$WT.log2FoldChange,res_merged$hnf1b.log2FoldChange,pch=16,cex=0.5,xlab="WT Salt Induced Log2FC",ylab="Hnf1b Salt Induced Log2FC",col=ifelse(res_merged$`Direct Target`,"red","black"))
-
-res_merged<-res_merged[with(res_merged,order('Direct Target','Effect Size')),]
-View(res_merged)
-res_merged[res_merged$`Direct Target` & res_merged$`Effect Size` > 1,]
-
-gg_plotCounts("Arhgap24")
-gg_plotCounts("Col4a1")
+ggsave(paste0("Figure3C_scatterPlot_",ts,".jpg"),g1,width=7,height=7,dpi=600)
 ```
+
+#Use Published ChIP-Seq data to find out which of these targets might be direct or indirect
+## Use macs2 to call peaks
 
 ```{bash MACS,eval=F}
 macs2 callpeak --call-summits -c igg_rep1_SRR2124926.dedup.unique.bam  -t hnf1b_rep1_SRR2124924.dedup.unique.bam -n hnf1b_rep1 -g mm
 macs2 callpeak --call-summits -c igg_rep2_SRR2124927.dedup.unique.bam  -t hnf1b_rep2_SRR2124925.dedup.unique.bam -n hnf1b_rep2 -g mm
 ```
 
-##
+## Import narrowPeak Files
 ```{r}
 narrowPeakToGRanges<-function(file) {
   x <- read.table(file,stringsAsFactors=F)
@@ -193,15 +191,23 @@ narrowPeakToGRanges<-function(file) {
   return(gr)
 }
 
-#devtools::install_github("lawremi/HelloRanges")
 hnf1b_rep1<-narrowPeakToGRanges("hnf1b_rep1_peaks.narrowPeak")
 hnf1b_rep2<-narrowPeakToGRanges("hnf1b_rep2_peaks.narrowPeak")
 pairs<-findOverlapPairs(hnf1b_rep1,hnf1b_rep2)
 hnf1b<-pintersect(pairs)
-head(hnf1b_rep2)
+head(hnf1b)
+```
 
-tss<-getAnnotation(ensembl_84,featureType="TSS")
-tss<-tss[rownames(res[res$baseMean > 1,])]
+## Annotate Peaks
+```{r}
+#tss<-getAnnotation(ensembl_84,featureType="TSS")
+#save(tss,file="tss.rdata")
+load("tss.rdata")
+
+#Subset to genes that are expressed
+x<-rownames(res_merged[res_merged$WT.baseMean > 1,])
+tss<-tss[names(tss) %in% x]
+
 hnf1b_anno <- annotatePeakInBatch(hnf1b, AnnotationData=tss, output="both", maxgap=100L)
 summary(hnf1b_anno$shortestDistance)
 table(hnf1b_anno$insideFeature)
@@ -210,20 +216,26 @@ p2<-hnf1b_anno[hnf1b_anno$insideFeature=="inside" | hnf1b_anno$insideFeature=="o
 p<-unique(c(p1,p2))
 res_merged$`Nearby Peak`<-rownames(res_merged) %in% p
 sum(res_merged$`Nearby Peak`)
-View(res_merged)
 ```
 
 ## Create Output
 ```{r}
 colnames(res_merged)
-temp<-res_merged[,c("mgi","WT.baseMean","WT.log2FoldChange","WT.padj","hnf1b.log2FoldChange","hnf1b.padj","Effect Size","Direct Target","Nearby Peak")]
-colnames(temp)<-c("MGI Symbol","baseMean","WT.log2FoldChange","WT.padj","Hnf1b.log2FoldChange","Hnf1b.padj","Effect_Size","Direct_Target","Nearby Peak")
-temp<-temp[with(temp,order(-Effect_Size)),]
+temp<-res_merged[,c("mgi","WT.baseMean","WT.log2FoldChange","WT.padj","hnf1b.log2FoldChange","hnf1b.padj",
+                    "iTerm","int","int.padj","Nearby Peak")]
+colnames(temp)<-c("MGI Symbol","baseMean","WT.log2FoldChange","WT.padj","Hnf1b.log2FoldChange","Hnf1b.padj",
+    "Interaction","Interaction.Size","Interaction.padj","Nearby Peak")
+temp<-temp[with(temp,order(-Interaction.Size)),]
 head(temp,40)
-write.csv(temp,file="hnf1b_nacl_log2FCs_wChIPdata_071016.csv",quote=F)
+write.csv(temp,file=paste0("hnf1b_nacl_log2FCs_wChIPdata_",ts,".csv"),quote=F)
+```
+
+## Upload Output to googlesheets
+```{r,eval=F}
 options(httr_oob_default=TRUE)
 gs_auth(new_user = TRUE)
-googlesheets::gs_upload("hnf1b_nacl_log2FCs_wChIPdata_071016.csv")
+temp_gs<-googlesheets::gs_upload(paste0("hnf1b_nacl_log2FCs_wChIPdata_",ts,".csv")
+#googlesheets::gs_browse(temp_gs)
 ```
 
 ## GO Analysis
@@ -250,7 +262,6 @@ names(degs)<-rownames(temp)
 table(degs)
 summary(degs)
 
-
 listGO<-function(goid) {
 print(OrganismDbi::select(Mus.musculus,keys=goid,keytype="GOID",columns="TERM"))
 tg<-OrganismDbi::select(Mus.musculus,keys=gocat[grep(goid,gocat$GOID),"ENSEMBL"],keytype="ENSEMBL",columns="SYMBOL")
@@ -262,30 +273,29 @@ pwf<-nullp(degs,bias.data=bd)
 GO.wall<-goseq(pwf,gene2cat=gocat.list)
 
 head(GO.wall,20) %>%
-  mutate(term=factor(term,levels=rev(term))) %>%
+  dplyr::mutate(term=factor(term,levels=rev(term))) %>%
 ggplot(aes(x=term,y=-log10(over_represented_pvalue))) +
   geom_bar(stat="identity",fill="red") +
   coord_flip() + xlab("") +
   theme_bw() 
 
 
-temp<-listGO("GO:0006814")
-head(temp)
-res_merged$sodium_transport<-rownames(res_merged) %in% temp$ENSEMBL
-res_merged[res_merged$sodium_transport & res_merged$`Effect Size` > 1,]$mgi
+#temp<-listGO("GO:0006814")
+#head(temp)
+#res_merged$sodium_transport<-rownames(res_merged) %in% temp$ENSEMBL
+#res_merged[res_merged$sodium_transport & res_merged$`Effect Size` > 1,]$mgi
 
-temp<-listGO("GO:0006811")
-head(temp)
-res_merged$ion_transport<-rownames(res_merged) %in% temp$ENSEMBL
-View(res_merged)
-res_merged[res_merged$ion_transport & res_merged$`Effect Size` > 1,]$mgi
+#temp<-listGO("GO:0006811")
+#head(temp)
+#res_merged$ion_transport<-rownames(res_merged) %in% temp$ENSEMBL
+#res_merged[res_merged$ion_transport & res_merged$`Effect Size` > 1,]$mgi
 
 ```
 
 
-## Wt vs DN
+## Compare Wt vs Hnf1b DN expression profiles in the absence of Salt
 ```{r}
-summary(res_genotype<-results(cds2, contrast=c("group","MifnoSalt","ControlnoSalt"),alpha=0.05))
+summary(res_genotype<-results(cds2, contrast=c("group","MifnoSalt","ControlnoSalt"),alpha=0.05,lfcThreshold = 1))
 colnames(res_genotype)<-paste0("Wt_vs_DN",".",colnames(res_genotype))
 #head(res_genotype<-as.data.frame(res_genotype))
 #head(res_genotype[!(is.na(res_genotype$Wt_vs_DN.padj) | is.na(res_genotype$Wt_vs_DN.log2FoldChange)),])
@@ -295,52 +305,46 @@ res_genotype$mgi<-mgi[idx,]$mgi_symbol
 res_genotype<-res_genotype[with(res_genotype,order(Wt_vs_DN.padj,Wt_vs_DN.log2FoldChange)),]
 head(res_genotype)
 res_genotype$`Nearby Peak`<-rownames(res_genotype) %in% p
-res_genotype$'Direct Target'<-rownames(res_genotype) %in% dt$ENSEMBL
 
-temp<-res_genotype[,c("mgi","Wt_vs_DN.baseMean","Wt_vs_DN.log2FoldChange","Wt_vs_DN.padj","Direct Target","Nearby Peak")]
-head(temp)
+temp<-res_genotype[,c("mgi","Wt_vs_DN.baseMean","Wt_vs_DN.log2FoldChange","Wt_vs_DN.padj","Nearby Peak")]
 gg_plotCounts("Pde4c")
-write.csv(temp,file="Wt_vs_DN_log2FCs_wChIPdata_071416.csv",quote=F)
+write.csv(temp,file=paste0("Wt_vs_DN_log2FCs_wChIPdata_",ts,".csv"),quote=F)
+```
+
+## Output to Google Sheets
+```{r eval=F}
 options(httr_oob_default=TRUE)
 googlesheets::gs_auth(new_user = TRUE)
-temp_gs<-googlesheets::gs_upload("Wt_vs_DN_log2FCs_wChIPdata_071416.csv")
-googlesheets::gs_browse(temp_gs)
-
+temp_gs<-googlesheets::gs_upload(paste0("Wt_vs_DN_log2FCs_wChIPdata_",ts,".csv"))
+#googlesheets::gs_browse(temp_gs)
 ```
 
-"Mon Aug  8 13:43:37 2016"
- 
- Want to make a heatmap of the Log2FC data of genes that don't change in the Mutant but do change in the WT.  Also a Log2Fc wt vs Log2FC mutant.
-  A - Schematic
-  B - Heatmap with Log2FC values (2 colums, 45+27 genes, annotation of wheter or not it is a direct target or not).  Sorted by size effect, not clustered
-  C - Stacked Barchart?  Number of Genes with Ups and Downs
-  D - Scatterplot with LogFC WT vs LogFC MT
-  
+#Heatmap of Genes that are direct targets and have an abs(Effect size) > 1  
   
 ```{r}
-head(res_merged)
-
-nrow(temp<-res_merged[abs(res_merged$WT.log2FoldChange) > 0.5 & abs(res_merged$hnf1b.log2FoldChange) < 0.1,])
-nrow(temp<-res_merged[abs(res_merged$WT.log2FoldChange) > 0.5,])
-nrow(temp<-res_merged)
-plot(temp$WT.log2FoldChange,temp$hnf1b.log2FoldChange,cex=0.5,pch=16,col=ifelse(temp$`Nearby Peak`,"red","black"))
-identify(temp$WT.log2FoldChange,temp$hnf1b.log2FoldChange,labels=temp$mgi)
+#head(res_merged)
+#
+#nrow(temp<-res_merged[abs(res_merged$WT.log2FoldChange) > 0.5 & abs(res_merged$hnf1b.log2FoldChange) < 0.1,])
+#nrow(temp<-res_merged[abs(res_merged$WT.log2FoldChange) > 0.5,])
+#nrow(temp<-res_merged)
+#plot(temp$WT.log2FoldChange,temp$hnf1b.log2FoldChange,cex=0.5,pch=16,col=ifelse(temp$`Nearby Peak`,"red","black"))
+#identify(temp$WT.log2FoldChange,temp$hnf1b.log2FoldChange,labels=temp$mgi)
 ```
 
 ```{r}
-ftu<-read_excel("failed_to_upregulate.xlsx")
-ftu<-ftu[,1:10]
-ftd<-read_excel("failed_to_downregulate.xlsx")
-ftd<-ftd[,1:10]
-ft<-as.data.frame(rbind(ftu,ftd))
-plot(ft$WT.log2FoldChange,ft$Hnf1b.log2FoldChange,cex=0.5,pch=16,col=ifelse(ft$`Nearby Peak`,"red","black"))
-identify(ft$WT.log2FoldChange,ft$Hnf1b.log2FoldChange,labels=ft$'MGI Symbol')
+#ftu<-read_excel("failed_to_upregulate.xlsx")
+#ftu<-ftu[,1:10]
+#ftd<-read_excel("failed_to_downregulate.xlsx")
+#ftd<-ftd[,1:10]
+#ft<-as.data.frame(rbind(ftu,ftd))
+#plot(ft$WT.log2FoldChange,ft$Hnf1b.log2FoldChange,cex=0.5,pch=16,col=ifelse(ft$`Nearby Peak`,"red","black"))
+#identify(ft$WT.log2FoldChange,ft$Hnf1b.log2FoldChange,labels=ft$'MGI Symbol')
 ```
 
 ## Remade res_merged to get the signs correct
 ```{r}
-temp<-res_merged[,c("mgi","WT.baseMean","WT.log2FoldChange","WT.padj","hnf1b.log2FoldChange","hnf1b.padj","Effect Size","Nearby Peak","int","int.padj")]
-colnames(temp)<-c("MGI Symbol","baseMean","WT.log2FoldChange","WT.padj","Hnf1b.log2FoldChange","Hnf1b.padj","Effect_Size","Nearby Peak","Interaction","Interaction.Padj")
+temp<-res_merged[,c("mgi","WT.baseMean","WT.log2FoldChange","WT.padj","hnf1b.log2FoldChange","hnf1b.padj","Nearby Peak","int","int.padj")]
+colnames(temp)<-c("MGI Symbol","baseMean","WT.log2FoldChange","WT.padj","Hnf1b.log2FoldChange","Hnf1b.padj","Nearby Peak","Interaction","Interaction.Padj")
 #Keep Karam's Peaks
 #temp<-temp[ft[,1],]
 #temp$`Nearby Peak`<-factor(ifelse(temp$`Nearby Peak`,"Bound by Hnf1b","Not Bound"))
@@ -353,15 +357,15 @@ dim(x<-x[abs(x$WT.log2FoldChange) > 1.0 & x$WT.padj < 0.05,])
 table(x$`Nearby Peak`)
 dim(x<-x[x$`Nearby Peak`==1,])
 
-adf<-x[,"Nearby Peak",drop=F]
-ann_colors = list( `Nearby Peak` = c("Not Bound"="white", "Bound by Hnf1b"="black") )
+#adf<-x[,"Nearby Peak",drop=F]
+#ann_colors = list( `Nearby Peak` = c("Not Bound"="white", "Bound by Hnf1b"="black") )
 
 
-pheatmap(x[,c("WT.log2FoldChange","Hnf1b.log2FoldChange")],cluster_rows=F,cluster_cols=F,labels_row=x[,"MGI Symbol"],
-         annotation_row = adf,annotation_colors = ann_colors,annotation_legend = FALSE)
+#pheatmap(x[,c("WT.log2FoldChange","Hnf1b.log2FoldChange")],cluster_rows=F,cluster_cols=F,labels_row=x[,"MGI Symbol"],
+#         annotation_row = adf,annotation_colors = ann_colors,annotation_legend = FALSE)
 ```
 
-## Barchart
+## Figure 3D Heatmap
 ```{r}
 rownames(x)
 f<-as.data.frame(fpkm(cds2))
@@ -370,6 +374,8 @@ remove_X <- function(s) {substr(s,1,nchar(s)-2)}
 
 colnames(f)<-sapply(strsplit(colnames(f),"_"),function(x) x[1]) %>% gsub("-","_",.) 
 f<-f[rownames(f) %in% rownames(x),]
+
+# dplyr to get mean fpkm per condition
 f<-as.data.frame(f) %>% 
   cbind(Gene = rownames(f)) %>% 
   tidyr::gather(Sample,Value,Control_A:Mif_Nacl_C) %>% 
@@ -377,33 +383,34 @@ f<-as.data.frame(f) %>%
   dplyr::group_by(Sample,Gene) %>% dplyr::summarise(fpkm=log2(mean(Value))) %>% 
   tidyr::spread(Sample,fpkm)
 
+#Add labels from MGI
 idx<-match(f$Gene,mgi$ensembl_gene_id)
 f$label <- mgi[idx,]$mgi_symbol
 
-idx<-match(f$Gene,rownames(resDF))
-f$effect_size<-resDF[idx,]$log2FoldChange
-f$Effect<-factor(ifelse(f$effect_size < 0,"Failure to Up Regulate","Failure to Down Regulate"),levels=c("Failure to Up Regulate","Failure to Down Regulate"))
+idx<-match(f$Gene,rownames(res_merged))
+f$int<-res_merged[idx,]$int
 
-f<-f[with(f,order(effect_size)),]
+#f$Effect<-factor(ifelse(f$int < 0,"Failure to Up Regulate","Failure to Down Regulate"),levels=c("Failure to Up Regulate","Failure to Down Regulate"))
 
-f$log2fc<-f$Control_Nacl-f$Control
-f<-f[with(f,order(-log2fc)),]
+f<-f[with(f,order(int)),]
+
+#Alternative sort by WT Log2FC
+#f$log2fc<-f$Control_Nacl-f$Control
+#f<-f[with(f,order(-log2fc)),]
 
 f2<-as.matrix(f[,2:5])
 rownames(f2)<-f$label
-Heatmap(f2,cluster_columns = FALSE,km=2)
 
-#ha = HeatmapAnnotation(barplot = anno_barplot(f$effect_size))
-
-ha <- HeatmapAnnotation(Effect_Size = row_anno_barplot(f$effect_size, baseline = 0, gp = gpar(fill = ifelse(f$effect_size > 0, "red", "green")),axis = TRUE),which='row',width = unit(2, "cm"),name="Interaction\nEffect\nSize")
-
+ha <- HeatmapAnnotation(Effect_Size = row_anno_barplot(f$int, baseline = 0, gp = gpar(fill = ifelse(f$int > 0, "red", "green")),axis = TRUE),which='row',width = unit(2, "cm"),name="Interaction\nEffect\nSize")
 
 h<-Heatmap(f2,clustering_distance_rows = "pearson",cluster_rows=FALSE,
            cluster_columns = FALSE,name="Mean\nLog2(FPKM)")
 
-#split=f$Effect
-#pdf("test.pdf",width=6,height=5)
 h+ha
-#dev.off()
+
+#split=f$Effect
+pdf(paste0("Figure3D_heatmap_",ts,".pdf"),width=6,height=5)
+h+ha
+dev.off()
 ```
 
