--- a/differentialExpression.Rmd
+++ b/differentialExpression.Rmd
@@ -24,7 +24,7 @@ library(goseq)
 library(ComplexHeatmap)
 library(gridExtra)
 
-ts<-format(Sys.time(), "%a_%b_%d_%Y_%H%M")
+(ts<-format(Sys.time(), "%a_%b_%d_%Y_%H%M"))
 cbPalette <- c("#999999", "#E69F00", "#56B4E9", "#009E73", "#F0E442", "#0072B2", "#D55E00", "#CC79A7")
 ```
 
@@ -167,7 +167,6 @@ res_merged$mgi<-mgi[idx,"mgi_symbol"]
 #Highlight genes with WTlogFC > 1 & strong interaction term
 summary(idx<-match(rownames(res_merged),rownames(resDF)))
 res_merged$int<-resDF[idx,"log2FoldChange"]
-res_merged[is.na(res_merged$int),"int"]<-0
 res_merged$int.padj<-resDF[idx,"padj"]
 
 res_merged$iTerm<-abs(res_merged$int) > 1 & res_merged$int.padj < 0.05 & abs(res_merged$WT.log2FoldChange) > 1 & res_merged$WT.padj < 0.05
@@ -183,7 +182,9 @@ res_merged$iTerm<-abs(res_merged$int) > 1 & res_merged$int.padj < 0.05 & abs(res
 
 #Figure 3C
 ```{r}
-(g1<-ggplot(res_merged,aes(x=WT.log2FoldChange,y=hnf1b.log2FoldChange)) + geom_point(aes(colour = int)) + theme_bw() +
+#subset res_merged to leave out genes interaction terms with missing values.
+
+(g1<-ggplot(subset(res_merged,!is.na(int)),aes(x=WT.log2FoldChange,y=hnf1b.log2FoldChange)) + geom_point(aes(colour = int)) + theme_bw() +
   scale_colour_gradient2("Hnf1b:NaCl\nInteraction\nEffect Size") )
 
 ggsave(paste0("Figure3C_scatterPlot_",ts,".jpg"),g1,width=7,height=7,dpi=600)
